@@ -1,5 +1,10 @@
 2005-02-09  Øyvind Kolås  <pippin@freedesktop.org>
 
+	* packages/cairo/lib/cairo.rb: Fixed naming of Transform class to be
+	Matrix.
+
+2005-02-09  Øyvind Kolås  <pippin@freedesktop.org>
+
 	* packages/cairo/lib/cairo.rb: Added the ability for save to
 	take a block.
 
